--- a/views/menu.html
+++ b/views/menu.html
@@ -1,7 +1,5 @@
-<div class="container">
-    <ul class="nav nav-pills">
-        <li ng-repeat="menu in navigation" class="{{menu.classis}}"><a href="{{menu.link}}">{{menu.name}}</a>
-        </li>
-    </ul>
-    </ul>
-</div>
+<ul class="nav navbar-nav">
+    <li ng-repeat="menu in navigation" class="{{menu.classis}}">
+        <a href="{{menu.link}}">{{menu.name}}</a>
+    </li>
+</ul>
