No moment for now

--- a/views/feature.html
+++ b/views/feature.html
@@ -65,6 +65,9 @@
     </ui-select>
     
     <h2>CamanJS</h2>
+    <p>Coming soon.</p>
     
-
+    <h2>MomentJS</h2>
+    <p>Date: {{today|date:dateformat}}</p>
+    <button class="btn btn-default" ng-click='dateformat="fullDate";'>Option 1</button>
 </section>
