--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,4 @@
-@import "lesshat.less";
-
-body { padding-top: 70px; }
+@import "../bower_components/lesshat/build/lesshat.less";
+ body {
+    padding-top: 70px;
+}
