--- a/views/slider.html
+++ b/views/slider.html
@@ -1,1 +1,7 @@
-<div class="container"></div>
+<div class="container">
+    <flex-slide slide="s in mySlides">
+        <li>
+            <img ng-src="{{s}}">
+        </li>
+    </flex-slide>
+</div>
