--- a/views/content/home.html
+++ b/views/content/home.html
@@ -1,1 +1,9 @@
-<div class="container">Hello World !</div>
+<div class="container">
+    
+    <flex-slider flex-slide="s in mySlides">
+        <li>
+            <img ng-src="{{s}}">
+        </li>
+    </flex-slider>
+    
+</div>
