--- a/views/slider.html
+++ b/views/slider.html
@@ -1,7 +1,1 @@
-<div class="container">
-    <flex-slide slide="s in mySlides">
-        <li>
-            <img ng-src="{{s}}">
-        </li>
-    </flex-slide>
-</div>
+<div class="container"></div>
