--- a/css/style.less
+++ b/css/style.less
@@ -3,18 +3,10 @@
     padding-top: 70px;
 }
 img.loading {
-    background-image: url(../img/loading.gif);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
     text-align: center;
-    position: absolute;
-    top: 0px;
     opacity: 1;
-    left: 50%;
-    .translateX(-50%);
-    width: 100px;
-    height: 100px;
+    width: 32px !important;
+    height: auto;
 }
 img {
     opacity: 0;
