--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,9 @@
 @import "../bower_components/lesshat/build/lesshat.less";
+@import "../bower_components/bootstrap/dist/css/bootstrap.min.css";
+@import "../bower_components/angular-loading-bar/build/loading-bar.min.css";
+@import "../bower_components/ngDialog/css/ngDialog.min.css";
+@import "../bower_components/fontawesome/css/font-awesome.min.css";
+@import "../bower_components/ui-select/dist/select.min.css";
  body {
     padding-top: 70px;
 }
