--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,10 @@
 @import "../bower_components/lesshat/build/lesshat.less";
 @import "../bower_components/bootstrap/dist/css/bootstrap.min.css";
 @import "../bower_components/angular-loading-bar/build/loading-bar.min.css";
+@import "../bower_components/angularjs-toaster/toaster.min.css";
+@import "../bower_components/angularjs-toaster/toaster.min.css";
+@import "../bower_components/ng-tags-input/ng-tags-input.min.css";
+@import "../bower_components/flexslider/flexslider.css";
 @import "../bower_components/ngDialog/css/ngDialog.min.css";
 @import "../bower_components/fontawesome/css/font-awesome.min.css";
 @import "../bower_components/ui-select/dist/select.min.css";
