--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,17 +3,13 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 @import "../bower_components/flexslider/flexslider.css";
 @import "../bower_components/font-awesome/css/font-awesome.min.css";
-
 /* Bootstrap Variables Goes Here */
-
 $brand-primary: #0d9dff !default;
 $brand-success: #84ce3c !default;
 $brand-warning: #ffec39 !default;
 $brand-danger: #fc483f !default;
 $brand-info: #000072 !default;
-
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-
 body {
   padding-top: 70px;
 }
@@ -32,6 +28,10 @@ img.doneLoading {
 }
 nav li:hover .dropdown-menu {
   display: block;
+}
+a {
+  cursor: pointer;
+  @include transition(all ease 300ms);
 }
 /* Start writing sass here */
 @import "fancybox-override";
