--- a/views/content/home.html
+++ b/views/content/home.html
@@ -1,9 +1,47 @@
-<div class="container">
 
+<section>
+
+<div class="yfl-relative">
+  <div class="main-slider">
     <flex-slider flex-slide="s in mySlides" prev-text="" next-text="">
         <li>
             <img ng-src="{{s}}">
         </li>
     </flex-slider>
+  </div>
+  <div class="row">
+  <div class="main-middle col-md-5 text-center">
+    <div class="logo"><img src="img/logo.png" class="img-responsive"></div>
+    <h1>welcome to yoga food love</h1>
+    <p class="mid-cont">Yoga Food Love is a global community being built on the  principles of yoga.
+       At YFL we aim to facilitate connecting like-minded people who believe in conscious
+       living with an attitude of gratitude. A family that breathes deeply, gives freely
+       and loves openly.</p>
+       <p>"Yoga is the journey of the self, through the self, to the self." -
+        <span class="red-text">The Bhagavad Gita</span>
+       </p>
 
+       <h1>stay tuned</h1>
+       <p><strong>We’ve got a lot more coming soon.</strong></p>
+
+       <div class="input-group search">
+         <input type="text" class="form-control search-input" placeholder="Subscribe to our Newsletter">
+         <span class="input-group-btn">
+           <button class="btn btn-default go-btn" type="button">
+             <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+         </span>
+       </div>
+
+       <!-- <div class="newsletter">
+                    <input type="text" placeholder="Subscribe to our Newsletter">
+                    <div class="submit">
+                      <i class="fa fa-arrow-right" aria-hidden="true"></i>Go!
+                    </div>
+
+                </div> -->
+                <!-- <input type="submit" value=""> -->
+  </div>
 </div>
+</div>
+
+</section>
