Placeholder Color Improved

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,6 +85,9 @@ footer {
     .form-control {
         border-color: $brand-danger;
         color: $brand-danger;
+        &::-webkit-input-placeholder {
+            color: $brand-danger;
+        }
     }
 }
 
