--- a/views/content/home.html
+++ b/views/content/home.html
@@ -13,14 +13,14 @@
     </ks-swiper-container>-->
 
     <div class="row">
-        <div class="col-md-2" ng-repeat="s in mySlides">
+        <div class="col-sm" ng-repeat="s in mySlides">
             <a ng-href="{{s}}" rel="gal" fancybox>
                 <img ng-src="{{s}}" class="full-img">
             </a>
         </div>
-        <div class="col-md-2">
+        <!--<div class="col-md-2">
             <a class="various fancybox.iframe" href="http://www.youtube.com/embed/L9szn1QQfas?autoplay=1" fancybox><img ng-src="http://img.youtube.com/vi/L9szn1QQfas/maxresdefault.jpg" class="full-img"></a>
-        </div>
+        </div>-->
     </div>
 
 </div>
