--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,12 @@
 <header>
-   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
+    <nav class="navbar navbar-light bg-light navbar-expand-sm fixed-top">
+        <div>
+            <a class="navbar-brand" ui-sref="home"><img src="img/logo.png" alt="logo" width="20"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-collapse" aria-controls="nav-collapse"
+                aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            <!--<div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -9,11 +14,17 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" ui-sref="home"><img src="img/logo.png" alt="logo" width="20"> </a>
-        </div>
+        </div>-->
 
-        <div class="collapse navbar-collapse" id="nav-collapse">
-               <div ng-include="template.menu" class="template menu"></div>
+            <div class="collapse navbar-collapse" id="nav-collapse">
+                <div ng-include="template.menu" class="template menu"></div>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 </header>
+
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+  </nav>
+</div>
